Simplify String formatting